FEAT: PLAN 캐싱 적용
Plan은 홈버튼을 누를 때마다 GET이 실행됩니다. 즉, 호출이 매우 빈번하게 일어납니다.
이러한 경우 SQL 쿼리가 많이 호출(비용 측면)될 뿐만 아니라,
응답 속도가 느릴 경우(성능 측면) 사용자 경험에 좋지 않은 영향을 끼칩니다.
따라서 캐싱을 사용하여 두 가지 문제를 모두 개선하려고 합니다.
readAllPlanByDate, readAllPlanByTag에는 @Cacheable을 이용하여 조회 및 추가
patchPlan, deletePlanById, createRepeatedPlan에는 @CacheEvict을 사용해
value에 해당하는 캐시 데이터를 비워냅니다.